force-app/main/default/objects/Loan_Account__x/fields/Repayment_Details_Days_Delinquent__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Details_Days_Delinquent__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Number of days repayments were late</description>
    <externalDeveloperName>DaysDelinquent</externalDeveloperName>
    <inlineHelpText>Number of days repayments were late</inlineHelpText>
    <label>Days Delinquent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>