force-app/main/default/objects/Loan_Account__x/fields/Repayment_Details_Interest_Repayments__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Details_Interest_Repayments__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Interest payments are paid in advance or in arrears</description>
    <externalDeveloperName>InterestRepayments</externalDeveloperName>
    <label>Interest Repayments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>