force-app/main/default/objects/Loan_Account__x/fields/Repayment_Details_Repayment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Details_Repayment_Frequency__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>How often repayments are made</description>
    <externalDeveloperName>RepaymentFrequency</externalDeveloperName>
    <inlineHelpText>How often repayments are made</inlineHelpText>
    <label>Repayment Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>