force-app/main/default/objects/Loan_Account__x/fields/Repayment_Details_Repayment_Type__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Details_Repayment_Type__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>The charging type on the loan account held (interest only or principal and interest) once the customer draws down the loan.</description>
    <externalDeveloperName>RepaymentType</externalDeveloperName>
    <inlineHelpText>The charging type on the loan account held (interest only or principal and interest) once the customer draws down the loan.</inlineHelpText>
    <label>Repayment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>