force-app/main/default/objects/Loan_Account__x/fields/SAO__c.field-meta.xml
<CustomField>
    <fullName>SAO__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>SAO</description>
    <externalDeveloperName>SAO</externalDeveloperName>
    <label>SAO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>