force-app/main/default/objects/Loan_Account__x/fields/Statement_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Statement_Mailing_Address__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy_Non_Personal_Information;Source - CAPS</complianceGroup>
    <description>This is the mailing address of the account statement. This field is required for mobile lenders to check if statements are sent to the right address.

This must include the statement address where there are up to two lines of the title, up to 3 street addresses plus the city, state, post code and optionally the country.</description>
    <externalDeveloperName>StatementMailingAddress</externalDeveloperName>
    <label>Statement Mailing Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>