force-app/main/default/objects/Loan_Account__x/fields/Sub_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Sub_Product_Code__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Sub Product Code</description>
    <externalDeveloperName>SubProductCode</externalDeveloperName>
    <label>Sub-Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>