force-app/main/default/objects/Loan_Account__x/fields/Suncorp_Bank_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Suncorp_Bank_Identifier__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>&apos;SB - New to ANZ&apos; (new customers) &apos;SB - Existing ANZ&apos; (existing CAP customers)</description>
    <externalDeveloperName>SuncorpBankIdentifier</externalDeveloperName>
    <label>Suncorp Bank Identifier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>