force-app/main/default/objects/Loan_Account__x/fields/Times_Past_Due_120_Days__c.field-meta.xml
<CustomField>
    <fullName>Times_Past_Due_120_Days__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Times Past Due 120 Days</description>
    <externalDeveloperName>PastDue120</externalDeveloperName>
    <label>120 Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>