force-app/main/default/objects/Loan_Account__x/fields/TPMI__c.field-meta.xml
<CustomField>
    <fullName>TPMI__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>TPMI</description>
    <externalDeveloperName>TPMI</externalDeveloperName>
    <label>TPMI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>